<resources>
    <string name="app_name">My App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_about">About</string>
    <string name="nav_device">Device</string>
    <string name="nav_exit">Exit</string>
    <string name="nav_flex_calculator">Flex Calculator</string>
    <string name="nav_settings">Settings</string>
    <string name="title_device">Device</string>
    <string name="action_bug_reporting">Bug Reporting</string>
    <string name="marca">Brand</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="country">Country</string>
    <string name="operating_system">Operating System</string>
    <string name="version">Version</string>
    <string name="device_imei" translatable="false">IMEI</string>
    <string name="serial" translatable="false">Serial</string>
    <string name="device_fingerprint" translatable="false">Fingerprint</string>
    <string name="app_email" translatable="false">contato@estadodaarte.com</string>
    <string name="sim_operator">Operator</string>
    <string name="sim_serial">SIM Serial</string>
    <string name="android_permission_denied">Permission Denied</string>
</resources>
