<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_flex_calculator"
            android:icon="@android:drawable/stat_sys_warning"
            android:title="@string/nav_flex_calculator"
            android:visible="false" />
        <item
            android:id="@+id/nav_device"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/nav_device" />
    </group>

    <item
        android:id="@+id/group2"
        android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_settings"
                android:visible="false" />
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_dialog_info"
                android:title="@string/nav_about"
                android:visible="false" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/nav_exit" />
        </menu>
    </item>

</menu>
